# aegis

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  pyproject.toml
aegis/: __init__.py  config.py  main.py
aegis/chat/: rag.py
aegis/db/: admin_config.py  engine.py  models.py  repositories.py
aegis/ingestion/: calendar_sync.py  email_poller.py  graph_client.py  meeting_detector.py  poller.py  screenpipe.py  teams_poller.py
aegis/intelligence/: briefings.py  draft_generator.py  meeting_prep.py  readiness.py  scheduler.py  sentiment.py  voice_profile.py
aegis/notifications/: macos.py
aegis/processing/: chat_extractor.py  email_extractor.py  embeddings.py  meeting_extractor.py  org_inference.py  pipeline.py  resolver.py  thread_analyzer.py  triage.py  workstream_detector.py
aegis/web/: __init__.py  breadcrumb.py
alembic/: env.py
alembic/versions/: 5b73bff49bcf_initial_schema.py
docs/: aegis_codebase_summary.md  aegis_full_manual_checklist.md  aegis_manual_checklist_v2.md  aegis_phase2_bugfix_prompt.md  aegis_phase3_verify_prompt.md  aegis_phase4_verify_prompt.md  aegis_phase5_manual_checklist.md  aegis_phase5_verify_prompt.md  aegis_remediation_plan.md  aegis_seed_test_prompt.md  todo.md
scripts/: aegis_ctl.py  backup.py  bootstrap_intelligence.py  com.aegis.plist  retention.py  seed_test_data.py  verify_phase3.py  verify_phase4.py  verify_phase5.py
tests/: test_email_poller.py  test_extractor.py  test_graph_client.py  test_pipeline.py  test_resolver.py  test_screenpipe.py  test_teams_poller.py  test_triage.py  test_workstream_detector.py
(+53 files in other folders)
