[project]
name = "aegis"
version = "0.1.0"
description = "AI Chief of Staff for macOS"
requires-python = ">=3.13"
dependencies = [
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3",
    # Config
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    # HTTP client
    "httpx>=0.28",
    # Microsoft Graph auth
    "msal>=1.31",
    # Date/time
    "python-dateutil>=2.9",
    "tzdata>=2024.2",
    "rich>=15.0.0",
    "anthropic>=0.95.0",
    "openai>=2.32.0",
    "langgraph>=1.1.6",
    "rapidfuzz>=3.14.5",
    "python-multipart>=0.0.26",
    "apscheduler>=3.11.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
aegis = "scripts.aegis_ctl:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100
